@@ -7,6 +7,7 @@ edit_workflow
 order_movement_simulation_interaction_workflow
 order_simulation_interaction_workflow
 preference_workflow
+pricing_interaction_workflow
 rule_interaction_workflow
 simulation_movement_causality_interaction_workflow
 validation_workflow
