@@ -1,3 +1,6 @@
+2007-10-30 yo
+* Add pricing_interaction_workflow.
+
 2007-10-29 jerome
 * Add field libraries for report and dialogs. Increase version to 1.0rc13
 
